# r_trans_bot_rs

./: .dockerignore  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  ddl.sql  docker-compose.yaml  test.env  web_dev.sh
.config/code-server/: config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  pr_builder.yaml
deployment/: manifest.yaml  secret_example.yaml
migrations/2020-09-04-194029_migrate_past/: down.sql  up.sql
migrations/2023-05-06-200027_friends/: down.sql  up.sql
src/: db_config.rs  errors.rs  main.rs  router.rs  schema.rs
src/conversation/: commands.rs  directories.rs  friends.rs  messages.rs  mod.rs  servers.rs  shared_server.rs  tasks.rs
src/core/: crypto.rs  flaresolver.rs  magnet.rs  mod.rs  rutracker.rs  trans_url.rs
src/db/: db_config.rs  mod.rs  repository.rs
src/db/models/: directories.rs  download_task.rs  friends.rs  magnet.rs  mod.rs  server.rs  user.rs
src/logic/: crypto.rs  db.rs  directories.rs  general.rs  magnet.rs  mod.rs  models.rs  repository.rs  rutracker.rs  servers.rs  tasks.rs  torrents.rs  trans_url.rs
