[package]
name = "remote-transmission-bot"
version = "0.1.0"
authors = ["red <red.avtovo@gmail.com>"]
edition = "2018"

[dependencies]
# Config
dotenv = "0.15.0"

# IO
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.2", features = ["full"] }
futures = "0.3.5"

# Db
postgres-types = { version = "0.2.0", features = ["derive", "with-uuid-0_8"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
r2d2 = { version = "0.8.9" }

# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ajson = "0.2"

# Logs
log = "0.4.8"
env_logger = "0.8.2"

job_scheduler = "1.2.1"
telegram-bot = { git = "https://github.com/Mephistophiles/telegram-bot"}
transmission-rpc = "0.3.3"
url = "2.1.1"
rand = "0.8.3"
async-trait = "0.1.36"
chrono = "0.4.15"

# crypto

aes = "0.6.0"
ofb = "0.5.1"
base64 = "^0.13"

#urlencode
percent-encoding = "2.1.0"

#html parser
scraper = "0.12.0"
