[package]
name = "remote-transmission-bot"
version = "2.0.0"
authors = ["red <red.avtovo@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
# Config
dotenvy = "0.15.5"

# IO
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }

# Db
postgres-types = { version = "0.2.6", features = ["derive", "with-uuid-0_8"] }
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
r2d2 = { version = "0.8.10" }
diesel_migrations = "2.1.0"

# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ajson = "0.3"

# Logs
log = "0.4.14"
env_logger = "0.11.3"

teloxide = { version = "0.12.2", features = ["macros"] }
transmission-rpc = "0.4.2"
url = "2.2.2"
rand = "0.8.4"
chrono = "0.4.19"

# crypto
aes-gcm = "0.10.3"
base64 = "0.21.5"

#urlencode
percent-encoding = "2.1.0"

#html parser
scraper = "0.19.1"
futures = "0.3.26"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true # Perform link-time optimizations.